[Q-08] expose traceable CNMV search
